force-app/main/default/objects/Finance_Auth_Details__c/Finance_Auth_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Finance Auth Details</label>
</CustomObject>