force-app/main/default/objects/Finance_Auth_Details__c/fields/End_Point_for_Branch__c.field-meta.xml
<CustomField>
    <fullName>End_Point_for_Branch__c</fullName>
    <label>End Point for Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>