force-app/main/default/objects/Finance_Auth_Details__c/fields/EndPoint_for_Finance_Lead_Data__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_for_Finance_Lead_Data__c</fullName>
    <label>EndPoint_for_Finance_Lead_Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>