force-app/main/default/objects/Finance_Auth_Details__c/fields/NonQualified_R2W_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>NonQualified_R2W_Endpoint__c</fullName>
    <label>NonQualified R2W Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>